Fixed bug on small devices

--- a/src/style.css
+++ b/src/style.css
@@ -313,6 +313,7 @@ footer {
   }
   h1 {
     font-size: 2.6em;
+    margin: 0px 15px;
   }
   .responsive {
     margin-top: -15px;
@@ -361,9 +362,16 @@ footer {
   .email-us-text {
     text-align: center;
   }
+  #feature-icon {
+    height: 20px;
+    width: 20px;
+  }
+  p {
+    font-size: 1.1em;
+  }
 }
-@media screen and (max-width: 600px) {
+@media screen and (max-width: 425px) {
   .road-line {
-    height: 130%;
+    height: 1400px;
   }
 }
